Thu Nov 26 18:52:37 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentServer_Task.cpp:
          If the narrow of the callback IOR fails, print the IOR

        * ciao/ComponentServer/CIAO_ServerActivator_Impl.cpp:
          Const change

Thu Nov 26 15:32:37 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/KeyedWriter/README:
        * connectors/dds4ccm/tests/UnkeyedSamples/README:
          Added test description

        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender.idl:
          Removed keys.

        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/Plan.cdp:
          Removed keys. Added qos_profile.

        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/USER_QOS_PROFILES.xml:
          Started with configuring DDS in order to test the unkeyed
          writer.

Thu Nov 26 13:59:39 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          KeyedWriter is not fixed, yet.

Thu Nov 26 13:48:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Servant_Impl_Base.cpp:
        * ciao/Servants/Servant_Impl_Base.h:
          Removed some methods or made them pure virtual, no need to let
          them throw no_implement, the derived template does implement it

Thu Nov 26 13:29:51 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver_exec.cpp:
          Removed CLINFO from log message in order to consistent with other
          log messages.

Thu Nov 26 13:11:06 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver_exec.cpp:
          Resolved runtime errors.
